# cli-helper

./: README.md  pyproject.toml
bugsquancher/: cli.py  formatter.py  main.py  matcher.py  models.py  parser.py  patterns.py
bugsquancher.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
shell/: bugsquancher.zsh
tests/: test_formatter.py  test_matcher.py  test_parser.py
